# research-agent

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  main.py  pyproject.toml  railway.json
prompts/: system_prompt.md
skills/report-exporter/: SKILL.md
skills/research-planner/: SKILL.md
skills/source-evaluator/: SKILL.md
skills/webpage-extractor/: SKILL.md
src/: agent.py  config.py  tools.py  utils.py
tests/: test_recovery.py
