[project]
name = "deepagents-001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "deepagents>=0.6.12",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=2.1.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=21.0.0",
    "pysocks>=1.7.1",
]
